# ILTDada

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  build.sh
docs/: README_CLI.md  README_dada2disk.md
src/: dada_fill_buffer.c  ilt_dada.c  ilt_dada.h  ilt_dada_cli.c  ilt_dada_cli.h  ilt_dada_fill_buffer.c
src/debug/: ilt_dada_fill_buffer.c
src/lib/: ilt_dada.c  ilt_dada.h  ilt_dada.h.in
src/recorder/: ilt_dada_cli.c  ilt_dada_cli.h  ilt_dada_dada2disk.c  ilt_dada_fill_buffer.c
